--- a/TuneSearch/app/src/main/res/layout/main_fragment.xml
+++ b/TuneSearch/app/src/main/res/layout/main_fragment.xml
@@ -8,14 +8,23 @@
         android:layout_height="match_parent"
         tools:context=".ui.main.MainFragment">
 
-    <TextView
-            android:id="@+id/message"
-            android:layout_width="wrap_content"
+    <Button
+            android:text="@string/button_search"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="MainFragment"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/searchButton" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/termEditText" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"/>
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/termEditText"
+            android:hint="@string/hint_search" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
