--- a/TuneSearch/app/src/main/res/layout/main_fragment.xml
+++ b/TuneSearch/app/src/main/res/layout/main_fragment.xml
@@ -13,7 +13,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/searchButton" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/termEditText" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/searchTermEditText" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"/>
     <EditText
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/termEditText"
+            android:id="@+id/searchTermEditText"
             android:hint="@string/hint_search" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
