--- a/TuneSearch/app/src/main/res/layout/fragment_track_list.xml
+++ b/TuneSearch/app/src/main/res/layout/fragment_track_list.xml
@@ -10,5 +10,5 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context=".ui.tracklist.TrackFragment"
+        tools:context=".TrackFragment"
         tools:listitem="@layout/fragment_track"/>
