--- a/TuneSearch/app/src/main/res/navigation/nav_graph.xml
+++ b/TuneSearch/app/src/main/res/navigation/nav_graph.xml
@@ -4,10 +4,10 @@
             xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph"
             app:startDestination="@id/mainFragment">
 
-    <fragment android:id="@+id/mainFragment" android:name="de.hshl.isd.tunesearch.ui.main.MainFragment"
+    <fragment android:id="@+id/mainFragment" android:name="de.hshl.isd.tunesearch.MainFragment"
               android:label="main_fragment" tools:layout="@layout/main_fragment">
         <action android:id="@+id/action_mainFragment_to_trackFragment" app:destination="@id/trackFragment"/>
     </fragment>
-    <fragment android:id="@+id/trackFragment" android:name="de.hshl.isd.tunesearch.ui.tracklist.TrackFragment"
+    <fragment android:id="@+id/trackFragment" android:name="de.hshl.isd.tunesearch.TrackFragment"
               android:label="fragment_track_list" tools:layout="@layout/fragment_track_list"/>
 </navigation>
