--- a/TuneSearchCompose/app/src/main/res/values/themes.xml
+++ b/TuneSearchCompose/app/src/main/res/values/themes.xml
@@ -3,14 +3,16 @@
     <style name="Theme.TuneSearchCompose" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teel_200</item>
-        <item name="colorSecondaryVariant">@color/teel_700</item>
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">
+            ?attr/colorPrimaryVariant
+        </item>
         <!-- Customize your theme here. -->
     </style>
 
@@ -22,5 +24,4 @@
     <style name="Theme.TuneSearchCompose.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.TuneSearchCompose.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
 </resources>
